--- a/assignment_3_final.ipynb
+++ b/assignment_3_final.ipynb
@@ -2438,7 +2438,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gfOJeBx2Ph7y"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 459
+        },
+        "id": "gfOJeBx2Ph7y",
+        "outputId": "2b2f554f-68ee-46b1-95fa-db0bf5c93dc8"
       },
       "source": [
         "def performNNWithEmCluster(data, i, j, n):\n",
@@ -2474,8 +2479,133 @@
         "\n",
         "pd.DataFrame(nn_output2_em, columns=['Dataset', 'Algorithm','train_accuracy', 'test_accuracy', 'train_time', 'test_time'])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.7/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.7/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.7/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.7/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.7/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Dataset</th>\n",
+              "      <th>Algorithm</th>\n",
+              "      <th>train_accuracy</th>\n",
+              "      <th>test_accuracy</th>\n",
+              "      <th>train_time</th>\n",
+              "      <th>test_time</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Pima Diabetes Dataset</td>\n",
+              "      <td>PCA</td>\n",
+              "      <td>0.756052</td>\n",
+              "      <td>0.753247</td>\n",
+              "      <td>0.145443</td>\n",
+              "      <td>0.001877</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Pima Diabetes Dataset</td>\n",
+              "      <td>ICA</td>\n",
+              "      <td>0.752328</td>\n",
+              "      <td>0.792208</td>\n",
+              "      <td>0.141468</td>\n",
+              "      <td>0.001697</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Pima Diabetes Dataset</td>\n",
+              "      <td>Feature Selection</td>\n",
+              "      <td>0.783985</td>\n",
+              "      <td>0.770563</td>\n",
+              "      <td>0.141293</td>\n",
+              "      <td>0.001113</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Synthetic Dataset</td>\n",
+              "      <td>PCA</td>\n",
+              "      <td>0.762857</td>\n",
+              "      <td>0.745000</td>\n",
+              "      <td>0.433783</td>\n",
+              "      <td>0.003400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Synthetic Dataset</td>\n",
+              "      <td>ICA</td>\n",
+              "      <td>0.777857</td>\n",
+              "      <td>0.745000</td>\n",
+              "      <td>0.375476</td>\n",
+              "      <td>0.003356</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Synthetic Dataset</td>\n",
+              "      <td>Feature Selection</td>\n",
+              "      <td>0.829286</td>\n",
+              "      <td>0.818333</td>\n",
+              "      <td>0.375230</td>\n",
+              "      <td>0.003595</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 Dataset          Algorithm  ...  train_time  test_time\n",
+              "0  Pima Diabetes Dataset                PCA  ...    0.145443   0.001877\n",
+              "1  Pima Diabetes Dataset                ICA  ...    0.141468   0.001697\n",
+              "2  Pima Diabetes Dataset  Feature Selection  ...    0.141293   0.001113\n",
+              "3      Synthetic Dataset                PCA  ...    0.433783   0.003400\n",
+              "4      Synthetic Dataset                ICA  ...    0.375476   0.003356\n",
+              "5      Synthetic Dataset  Feature Selection  ...    0.375230   0.003595\n",
+              "\n",
+              "[6 rows x 6 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
     },
     {
       "cell_type": "code",
