--- a/assignment_3_final.ipynb
+++ b/assignment_3_final.ipynb
@@ -60,7 +60,7 @@
       },
       "source": [
         "def getData():\n",
-        "  dataset = pd.read_csv(\"/content/drive/MyDrive/assignment3/pima-indians-diabetes.csv\")\n",
+        "  dataset = pd.read_csv(\"pima-indians-diabetes.csv\")\n",
         "  X = dataset.iloc[:, :-1]\n",
         "  Y = dataset.iloc[:, -1]\n",
         "\n",
